[gd_scene load_steps=8 format=3 uid="uid://jp5w8jprwi0p"]

[ext_resource type="Texture2D" uid="uid://cy0rye4s2lu4y" path="res://assets/textures/menus/null.png" id="1_hjd8l"]
[ext_resource type="Script" uid="uid://bn2vv3v8yn5x2" path="res://scripts/recipes.gd" id="2_5noku"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6pfy3"]
bg_color = Color(0, 0, 0, 0.564706)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(0.698039, 0.133333, 0.133333, 1)
corner_radius_top_left = 38
corner_radius_top_right = 38
corner_radius_bottom_right = 38
corner_radius_bottom_left = 38

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5noku"]
bg_color = Color(0, 0, 0, 0.564706)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(0.976471, 0.709804, 0.247059, 1)
corner_radius_top_left = 38
corner_radius_top_right = 38
corner_radius_bottom_right = 38
corner_radius_bottom_left = 38

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_onnga"]
bg_color = Color(0, 0, 0, 0.564706)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(0.698039, 0.133333, 0.133333, 1)
corner_radius_top_left = 38
corner_radius_top_right = 38
corner_radius_bottom_right = 38
corner_radius_bottom_left = 38

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hjd8l"]
bg_color = Color(0, 0, 0, 0.564706)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(0.698039, 0.133333, 0.133333, 1)
corner_radius_top_left = 38
corner_radius_top_right = 38
corner_radius_bottom_right = 38
corner_radius_bottom_left = 38

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d4eax"]
content_margin_left = 20.0
content_margin_top = 12.0
content_margin_right = 20.0
content_margin_bottom = 12.0
bg_color = Color(0, 0, 0, 0.784314)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[node name="RecipeButton" type="Button" groups=["Buttons", "Recipe"]]
offset_right = 80.0
offset_bottom = 80.0
theme_override_styles/focus = SubResource("StyleBoxFlat_6pfy3")
theme_override_styles/hover = SubResource("StyleBoxFlat_5noku")
theme_override_styles/pressed = SubResource("StyleBoxFlat_onnga")
theme_override_styles/normal = SubResource("StyleBoxFlat_hjd8l")
icon = ExtResource("1_hjd8l")
icon_alignment = 1
expand_icon = true
script = ExtResource("2_5noku")
new_resource_texture = ExtResource("1_hjd8l")
alt_resource_texture = ExtResource("1_hjd8l")
texture_1 = ExtResource("1_hjd8l")
texture_2 = ExtResource("1_hjd8l")
texture_3 = ExtResource("1_hjd8l")
texture_4 = ExtResource("1_hjd8l")
byproduct_texture_1 = ExtResource("1_hjd8l")
byproduct_texture_2 = ExtResource("1_hjd8l")

[node name="AlternativeResource" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -39.0
offset_top = -36.0
offset_right = -7.0
offset_bottom = -4.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("1_hjd8l")

[node name="RecipeTooltip" type="PanelContainer" parent="."]
visible = false
z_index = 200
custom_minimum_size = Vector2(250, 175)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 104.0
offset_right = 200.0
offset_bottom = 499.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_d4eax")

[node name="Label" type="Label" parent="RecipeTooltip"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 32
text = " x0 "
horizontal_alignment = 1
vertical_alignment = 1

[node name="RecipeList" type="VBoxContainer" parent="RecipeTooltip"]
layout_mode = 2
size_flags_vertical = 0
alignment = 1

[node name="TopGap" type="Label" parent="RecipeTooltip/RecipeList"]
layout_mode = 2
text = "
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemsDeCima" type="HBoxContainer" parent="RecipeTooltip/RecipeList"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="Item1" type="VBoxContainer" parent="RecipeTooltip/RecipeList/ItemsDeCima"]
layout_mode = 2

[node name="Texture" type="TextureRect" parent="RecipeTooltip/RecipeList/ItemsDeCima/Item1"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
stretch_mode = 5

[node name="Label" type="Label" parent="RecipeTooltip/RecipeList/ItemsDeCima/Item1"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
vertical_alignment = 1

[node name="Item2" type="VBoxContainer" parent="RecipeTooltip/RecipeList/ItemsDeCima"]
layout_mode = 2

[node name="Texture" type="TextureRect" parent="RecipeTooltip/RecipeList/ItemsDeCima/Item2"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
stretch_mode = 5

[node name="Label" type="Label" parent="RecipeTooltip/RecipeList/ItemsDeCima/Item2"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemsDeBaixo" type="HBoxContainer" parent="RecipeTooltip/RecipeList"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="Item1" type="VBoxContainer" parent="RecipeTooltip/RecipeList/ItemsDeBaixo"]
layout_mode = 2

[node name="Texture" type="TextureRect" parent="RecipeTooltip/RecipeList/ItemsDeBaixo/Item1"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
stretch_mode = 5

[node name="Label" type="Label" parent="RecipeTooltip/RecipeList/ItemsDeBaixo/Item1"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
vertical_alignment = 1

[node name="Item2" type="VBoxContainer" parent="RecipeTooltip/RecipeList/ItemsDeBaixo"]
layout_mode = 2

[node name="Texture" type="TextureRect" parent="RecipeTooltip/RecipeList/ItemsDeBaixo/Item2"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
stretch_mode = 5

[node name="Label" type="Label" parent="RecipeTooltip/RecipeList/ItemsDeBaixo/Item2"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
vertical_alignment = 1

[node name="ByproductLabel" type="Label" parent="RecipeTooltip/RecipeList"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "
By-Products"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemsByproduct" type="HBoxContainer" parent="RecipeTooltip/RecipeList"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="Item1" type="VBoxContainer" parent="RecipeTooltip/RecipeList/ItemsByproduct"]
layout_mode = 2

[node name="Texture" type="TextureRect" parent="RecipeTooltip/RecipeList/ItemsByproduct/Item1"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
stretch_mode = 5

[node name="Label" type="Label" parent="RecipeTooltip/RecipeList/ItemsByproduct/Item1"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
vertical_alignment = 1

[node name="Item2" type="VBoxContainer" parent="RecipeTooltip/RecipeList/ItemsByproduct"]
layout_mode = 2

[node name="Texture" type="TextureRect" parent="RecipeTooltip/RecipeList/ItemsByproduct/Item2"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
stretch_mode = 5

[node name="Label" type="Label" parent="RecipeTooltip/RecipeList/ItemsByproduct/Item2"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
